# ai-k8s

./: .coverage  .flake8  .gitignore  .test-config.json  AGENTS.md  CLAUDE.md  README.md  REUSABLE-WSL-TESTING-PATTERN.md  WSL-SETUP.md  notes.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.claude/: QUALITY-ISSUES-ASSESSMENT.md  QUALITY-REMEDIATION-TASKS.md  README.md  settings.json
.claude/architecture/: ADR-001-argocd-testing-approaches-analysis.md  ADR-002-argocd-testing-implementation-strategy.md  ADR-003-github-mcp-server-for-issue-workflow.md  ADR-004-kubectl-aws-cli-for-testing-verification.md  README.md  template-adr.md
.claude/specs/: BOOTSTRAP-WORKFLOW.md  SPECS-STATUS.md  todo.md
.claude/specs/argocd-bootstrap/: requirements.md
.claude/specs/argocd-crd-advanced-static/: design.md  requirements.md
.claude/specs/argocd-crd-basic-static/: design.md  requirements.md
.claude/steering/: ai-agent-checklist.md  platform-commands.md  product.md  structure.md  tech.md  wsl-testing.md
docs/: DOCUMENTATION-STRUCTURE.md  WSL-TESTING-INDEX.md
mk8/: __main__.py
mk8.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mk8/business/: bootstrap_manager.py  credential_manager.py  credential_models.py  crossplane_installer.py  crossplane_manager.py  verification.py  verification_models.py
mk8/cli/: main.py  output.py
mk8/cli/commands/: bootstrap.py  (+4 more)
mk8/core/: errors.py  logging.py  version.py
mk8/integrations/: aws_client.py  file_io.py  helm_client.py  kind_client.py  kubeconfig.py  kubectl_client.py  platform_models.py  prerequisite_models.py  prerequisites.py
prototype/: .shellcheckrc  README.md  env-bootstrap.sh  mk8-prototype.sh  run-tests-wsl.ps1  run-tests.sh  setup-wsl-test-env.sh
prototype/.config/: env-mk8-aws-template
prototype/lib/: bootstrap.sh  common.sh  config.sh  crossplane.sh
prototype/tests/: test_helper.bash
scripts/: run-tests.ps1  test-runner.sh
tests/integration/: test_cli_execution.py  test_error_flow.py  test_help_system.py  test_option_placement.py
tests/unit/: test_main_entry.py
util/: copy_over.sh
util/files/: base_install.sh  config  gitconfig
(+95 files in other folders)
